@@ -252,6 +252,10 @@ void do_plusemail(dbref executor, dbref cause, dbref enactor, int key,
         *subject = '\0';
         subject++;
     }
+    else
+    {
+        subject = mudconf.mail_subject;
+    }
 
     char *pMailServer = ConvertCRLFtoSpace(mudconf.mail_server);
     SOCKET mailsock = INVALID_SOCKET;
@@ -415,7 +419,7 @@ void do_plusemail(dbref executor, dbref cause, dbref enactor, int key,
     mod_email_sock_printf(mailsock, "From: %s <%s>\r\n",  pSendName, ConvertCRLFtoSpace(mudconf.mail_sendaddr));
     mod_email_sock_printf(mailsock, "To: %s\r\n", addy);
     mod_email_sock_printf(mailsock, "X-Mailer: TinyMUX %s\r\n", mudstate.short_ver);
-    mod_email_sock_printf(mailsock, "Subject: %s\r\n\r\n", subject ? subject : ConvertCRLFtoSpace(mudconf.mail_subject));
+    mod_email_sock_printf(mailsock, "Subject: %s\r\n\r\n", ConvertCRLFtoSpace(subject));
     mod_email_sock_printf(mailsock, "%s\r\n", body);
     mod_email_sock_printf(mailsock, "\r\n.\r\n");
     MEMFREE(pSendName);
